flipkart-clone/k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
    namespace: flipkart
    labels:
      app: mongodb
spec:
    replicas: 1
    selector:
      matchLabels:
        app: mongodb
    template:
      metadata:
        labels:
          app: mongodb
      spec:
        containers:
          - name: mongodb
            image: mongo:7
            ports:
              - containerPort: 27017
            resources:
              requests:
                memory: "512Mi"
                cpu: "250m"
              limits:
                memory: "1Gi"
                cpu: "1000m"
            volumeMounts:
              - name: mongo-data
                mountPath: /data/db
        volumes:
          - name: mongo-data
            persistentVolumeClaim:
              claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb
    namespace: flipkart
spec:
    selector:
      app: mongodb
    ports:
      - port: 27017
        targetPort: 27017
